<resources>
    <string name="app_name">Alice eMarket</string>
    <string name="search">Search</string>
    <string name="Category">Category</string>
    <string name="price">Price:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="CategoryTitle">Category:</string>
    <string name="quantity">Quantity:</string>
    <string name="seller_details">Seller Details</string>
    <string name="seller_name">Seller name:</string>
    <string name="seller_message">Seller Message</string>
    <string name="google_sign_in_message">Sign in with your google account\n to sell your products</string>
    <string name="profile">Profile</string>
    <string name="logout">Sign out</string>
    <string name="done">Done</string>
    <string name="productName">Product name</string>
    <string name="priceHint">Price</string>
    <string name="unit">Unit</string>
    <string name="quantityHint">Quantity</string>
    <string name="contactInformation">Contact Information</string>
    <string name="phoneHint">Phone number</string>
    <string name="location">Location</string>
    <string name="fruits">Fruits</string>
    <string name="vegetable">Vegetable</string>
    <string name="poultry">Poultry</string>
    <string name="livestock">Livestock</string>

</resources>