<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Features.View.Seller.AddProduct">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/toolbarMenuTheme" />
        </com.google.android.material.appbar.AppBarLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <androidx.cardview.widget.CardView
                    android:id="@+id/imageCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:elevation="@dimen/_5sdp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_8sdp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/productImage"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_200sdp"
                            android:scaleType="centerCrop"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>
                        <ImageView
                            android:id="@+id/addImageIcon"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_200sdp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:src="@drawable/ic_image_search"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:hint="@string/productName"
                    android:textColorHint="@android:color/black"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/greenPea"
                    android:theme="@style/textInputEditTextTheme"
                    app:theme="@style/textInputEditTextTheme"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/productName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Category"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/greenPea"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:theme="@style/textInputEditTextTheme"
                    app:theme="@style/textInputEditTextTheme"
                    >

                    <AutoCompleteTextView
                        android:id="@+id/category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:textColor="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:hint="@string/priceHint"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/greenPea"
                    android:theme="@style/textInputEditTextTheme"
                    app:theme="@style/textInputEditTextTheme"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/price"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top"
                        android:inputType="numberDecimal"
                        android:singleLine="true"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    >


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:hint="@string/quantityHint"
                        android:textColorHint="@color/black"
                        app:hintTextColor="@color/black"
                        app:boxStrokeColor="@color/greenPea"
                        android:theme="@style/textInputEditTextTheme"
                        app:theme="@style/textInputEditTextTheme"
                        android:layout_weight="1"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/quantity"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="top"
                            android:inputType="numberDecimal"
                            android:singleLine="true"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>



                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/unit"
                        android:textColorHint="@color/black"
                        app:hintTextColor="@color/black"
                        app:boxStrokeColor="@color/greenPea"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:theme="@style/textInputEditTextTheme"
                        app:theme="@style/textInputEditTextTheme"
                        android:layout_weight="1"
                        >

                        <AutoCompleteTextView
                            android:id="@+id/unit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:textColor="@android:color/black" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:hint="@string/seller_message"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/greenPea"
                    android:theme="@style/textInputEditTextTheme"
                    app:theme="@style/textInputEditTextTheme"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sellerMessage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top"
                        android:inputType="textMultiLine"
                        android:singleLine="false"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>