<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Features.View.HomeActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_15sdp"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <androidx.cardview.widget.CardView
                android:id="@+id/fruits"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                app:cardBackgroundColor="@color/greenPea"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/list"
                app:layout_constraintEnd_toStartOf="@id/livestock"
                app:layout_constraintBottom_toTopOf="@id/poultry"
                android:layout_margin="@dimen/_5sdp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="@dimen/_20sdp"
                    >
                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:src="@drawable/ic_fruits"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/fruits"
                        android:textStyle="bold"
                        android:textSize="@dimen/_14sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/livestock"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                app:cardBackgroundColor="@color/greenPea"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/list"
                app:layout_constraintBottom_toTopOf="@id/vegetable"
                app:layout_constraintStart_toEndOf="@id/fruits"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/_5sdp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="@dimen/_20sdp"
                    >
                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:src="@drawable/ic_livestock"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/livestock"
                        android:textStyle="bold"
                        android:textSize="@dimen/_14sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/poultry"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                app:cardBackgroundColor="@color/greenPea"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/fruits"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/vegetable"
                android:layout_margin="@dimen/_5sdp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="@dimen/_20sdp"
                    >
                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:src="@drawable/ic_poultry"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/poultry"
                        android:textStyle="bold"
                        android:textSize="@dimen/_14sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/vegetable"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                app:cardBackgroundColor="@color/greenPea"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/livestock"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/poultry"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/_5sdp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="@dimen/_20sdp"
                    >
                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:src="@drawable/ic_vegetable"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/vegetable"
                        android:textStyle="bold"
                        android:textSize="@dimen/_14sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/_20sdp"
            android:src="@drawable/ic_add_product"
            app:tint="@color/white"
            app:backgroundTint="@color/greenPea"
            />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>